--- a/templates/store/product-detail.html
+++ b/templates/store/product-detail.html
@@ -18,59 +18,51 @@
     </article> <!-- gallery-wrap .end// -->
             </aside>
             <main class="col-md-6 border-left">
-    <article class="content-body">
-    
-    <h2 class="title">{{ product.product_name }}</h2>
-    
-    <div class="mb-3"> 
-        <var class="price h4">${{ product.price }}</var> 
-    </div> 
-    
-    <p>{{ product.description }}</p>
-    
-    
-    <hr>
-        <div class="row">
-            <div class="item-option-select">
-                <h6>Choose Color</h6>
-                <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> Silver
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" > Gray
-                  </label>
-                  <label class="btn btn-light active">
-                    <input type="radio" name="radio_color checked"> Gold
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> Black
-                  </label>
-                </div> 
-            </div>
-        </div> <!-- row.// -->
-        <div class="row">
-            <div class="item-option-select">
-                <h6>Select Size</h6>
-                <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> S
-                  </label>
-                  <label class="btn btn-light active">
-                    <input type="radio" name="radio_color" checked> M
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> L
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> XL
-                  </label>
-                </div> 
-            </div>
-        </div> <!-- row.// -->
-        <hr>
-        <a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-    </article> <!-- product-info-aside .// -->
+
+    <form action="{% url 'add_cart' product.id %}" method="post">
+        {% csrf_token %}
+      <article class="content-body">
+      
+      <h2 class="title">{{ product.product_name }}</h2>
+      
+      <div class="mb-3"> 
+          <var class="price h4">${{ product.price }}</var> 
+      </div> 
+      
+      <p>{{ product.description }}</p>
+      
+      
+      <hr>
+          <div class="row">
+              <div class="item-option-select">
+                  <h6>Select Color</h6>
+                  <select name="color" class="form-control">
+                    <option value="{{ product.variation_set.colors.first.variation_value | lower }}" selected>{{ product.variation_set.colors.first.variation_value | capfirst }}</option>
+                      {% for product in product.variation_set.colors|slice:"1:" %}
+                        <option value="{{ product.variation_value | lower }}">{{ product.variation_value | capfirst }}</option>
+                      {% endfor %}
+                  </select>
+              </div>
+          </div> <!-- row.// -->
+          <div class="row">
+              <div class="item-option-select">
+                  <h6>Select Size</h6>
+                  <select name="size" class="form-control">
+                    <option value="{{ product.variation_set.sizes.first.variation_value | lower }}" selected>{{ product.variation_set.sizes.first.variation_value | capfirst }}</option>
+                    {% for product in product.variation_set.sizes|slice:"1:" %}
+                      <option value="{{ product.variation_value | lower }}">{{ product.variation_value | capfirst }}</option>
+                    {% endfor %}
+                </select>
+              </div>
+          </div> <!-- row.// -->
+          <hr>
+          {% if product.stock == 0 %}
+            <h5 class="text-danger">Out Of Stock</h5>
+          {% else %}
+              <button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
+          {% endif %}
+      </article> <!-- product-info-aside .// -->
+    </form>
             </main> <!-- col.// -->
         </div> <!-- row.// -->
     </div> <!-- card.// -->
