--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -12,21 +12,22 @@
             <aside class="col-lg-6">
         <div class="card">
             <h4 class="card-title mb-4">Billing Address</h4>
-            <form action="" method="post">
+            <form action="{% url 'place_order' %}" method="post">
+                {% csrf_token %}
                 <div class="form-row">
                     <div class="col form-group">
                         <label for="first_name">First Name</label>
-                        <input type="text" name="first_name" id="first_name" class="form-control" required>
+                        <input type="text" name="first_name" id="first_name" class="form-control" readonly value="{{ user.first_name }} "required>
                     </div>
                     <div class="col form-group">
                         <label for="last_name">Last Name</label>
-                        <input type="text" name="last_name" id="last_name" class="form-control" required>
+                        <input type="text" name="last_name" id="last_name" class="form-control" readonly value="{{ user.last_name }}" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="col form-group">
                         <label for="email">Email</label>
-                        <input type="email" name="email" id="email" class="form-control" required>
+                        <input type="email" name="email" id="email" class="form-control" readonly value="{{ user.email }}" required>
                     </div>
                     <div class="col form-group">
                         <label for="phone">Phone</label>
@@ -35,12 +36,12 @@
                 </div>
                 <div class="form-row">
                     <div class="col form-group">
-                        <label for="addres1">Address Line 1</label>
-                        <input type="text" name="addres1" id="addres1" class="form-control" required>
+                        <label for="address_line_1">Address Line 1</label>
+                        <input type="text" name="address_line_1" id="addres1" class="form-control" required>
                     </div>
                     <div class="col form-group">
-                        <label for="addres2">Address Line 2</label>
-                        <input type="text" name="addres2" id="addres2" class="form-control">
+                        <label for="address_line_2">Address Line 2</label>
+                        <input type="text" name="address_line_2" id="addres2" class="form-control">
                     </div>
                 </div>
                 <div class="form-row">
@@ -53,8 +54,8 @@
                         <input type="text" name="state" id="state" class="form-control">
                     </div>
                     <div class="col form-group">
-                        <label for="pin">Pin code</label>
-                        <input type="text" name="pin" id="pin" class="form-control">
+                        <label for="pincode">Pin code</label>
+                        <input type="text" name="pincode" id="pincode" class="form-control">
                     </div>
                     <div class="col form-group">
                         <label for="country">Country</label>
