--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
     <title>GreatKart | One of the Biggest Online Shopping Platform</title>
 
     <link href="{% static '/images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- jQuery -->
     <script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
